--- a/package.json
+++ b/package.json
@@ -33,20 +33,33 @@
     "@heroicons/react": "2.2.0",
     "@next-auth/prisma-adapter": "1.0.7",
     "@prisma/client": "6.5.0",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.7",
     "@react-email/components": "0.0.34",
     "@react-email/render": "1.0.5",
     "@retracedhq/logs-viewer": "2.10.1",
     "@retracedhq/retraced": "0.7.22",
     "@sentry/nextjs": "9.10.1",
     "@tailwindcss/typography": "0.5.16",
+    "apify-client": "^2.12.1",
     "bcryptjs": "3.0.2",
+    "class-variance-authority": "^0.7.1",
     "classnames": "2.5.1",
+    "clsx": "^2.1.1",
     "cookies-next": "5.1.0",
     "currency-symbol-map": "5.1.0",
     "formik": "2.4.6",
     "i18next": "24.2.3",
+    "lucide-react": "^0.487.0",
     "micromatch": "4.0.8",
     "mixpanel-browser": "2.62.0",
+    "natural": "^8.0.1",
     "next": "15.2.4",
     "next-auth": "4.24.11",
     "next-i18next": "15.4.2",
@@ -58,11 +71,14 @@
     "react-google-recaptcha": "3.1.0",
     "react-hot-toast": "2.5.2",
     "react-i18next": "15.4.1",
+    "sentiment": "^5.0.2",
     "sharp": "0.33.5",
     "slack-notify": "2.0.7",
+    "stopword": "^3.1.4",
     "stripe": "17.7.0",
     "svix": "1.62.0",
     "swr": "2.3.3",
+    "tailwind-merge": "^3.2.0",
     "yup": "1.6.1",
     "zod": "3.24.2"
   },
