--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,9 @@
     "baseUrl": ".",
     "noImplicitAny": false,
     "paths": {
-      "@/lib/*": ["lib/*"],
-      "@/components/*": ["components/*"],
+      "@/*": ["./*"]
     },
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next-auth.d.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "next-auth.d.ts", "pages/teams/[slug]/reviews.tsx.bak"],
   "exclude": ["node_modules"],
 }
